2008-03-24  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by NOBODY.
        
        SquirrelFish lives.
        
        Initial check-in of the code I've been carrying around. Lots of stuff
        doesn't work. Plus a bunch of empty files.

2008-05-19  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Tim.

        <rdar://problem/5770054> JavaScript profiler (10928)
        -In an effort to make the profiler as efficient as possible instead of
        prepending to a vector we keep the vector in reverse order and operate
        over it backwards.

        * profiler/Profile.cpp:
        (KJS::Profile::willExecute):
        (KJS::Profile::didExecute):
        * profiler/ProfileNode.cpp:
        (KJS::ProfileNode::didExecute):
        (KJS::ProfileNode::endAndRecordCall):
        * profiler/ProfileNode.h:
        * profiler/Profiler.cpp:
        (KJS::getStackNames):

2008-05-16  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Tim.

        <rdar://problem/5770054> JavaScript profiler (10928)
        Implement sorting for the profiler.
        I chose to sort the profileNodes in place since there is no reason they
        need to retain their original order.

        * JavaScriptCore.exp: Export the symbols.
        * profiler/Profile.h: Add the different ways a profile can be sorted.
        (KJS::Profile::sortTotalTimeDescending):
        (KJS::Profile::sortTotalTimeAscending):
        (KJS::Profile::sortSelfTimeDescending):
        (KJS::Profile::sortSelfTimeAscending):
        (KJS::Profile::sortCallsDescending):
        (KJS::Profile::sortCallsAscending):
        * profiler/ProfileNode.cpp: Implement those ways.
        (KJS::totalTimeDescendingComparator):
        (KJS::ProfileNode::sortTotalTimeDescending):
        (KJS::totalTimeAscendingComparator):
        (KJS::ProfileNode::sortTotalTimeAscending):
        (KJS::selfTimeDescendingComparator):
        (KJS::ProfileNode::sortSelfTimeDescending):